# llm-contextkit

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: agentic_workflow.py  basic_chatbot.py  rag_application.py
llm_contextkit/: __init__.py  assembler.py  budget.py  exceptions.py
llm_contextkit/formatting/: __init__.py  formatter.py  templates.py
llm_contextkit/history/: __init__.py  strategies.py
llm_contextkit/inspector/: __init__.py  debug.py
llm_contextkit/layers/: __init__.py  base.py  history.py  retrieved.py  system.py  tool_results.py  user_context.py
llm_contextkit/tokenizers/: __init__.py  counting.py
tests/: __init__.py  test_assembler.py  test_budget.py  test_exceptions.py  test_formatting.py  test_history_strategies.py  test_inspector.py  test_tokenizer.py
tests/test_layers/: __init__.py  test_history.py  test_retrieved.py  test_system.py  test_tool_results.py  test_user_context.py
