[project]
name = "llm-contextkit"
version = "0.1.0"
description = "Composable building blocks for LLM context engineering"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "LLM ContextKit Contributors"}
]
readme = "README.md"
keywords = [
    "llm",
    "context",
    "prompt",
    "chatbot",
    "rag",
    "openai",
    "anthropic",
    "token",
    "ai",
    "nlp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.5.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
all = [
    "tiktoken>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/llm-contextkit/llm-contextkit"
Documentation = "https://github.com/llm-contextkit/llm-contextkit#readme"
Repository = "https://github.com/llm-contextkit/llm-contextkit.git"
Issues = "https://github.com/llm-contextkit/llm-contextkit/issues"
Changelog = "https://github.com/llm-contextkit/llm-contextkit/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_contextkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tiktoken"
ignore_missing_imports = true

[tool.coverage.run]
source = ["llm_contextkit"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
